<!--
  ~ Copyright 2024-2026 karoo-headwind contributors
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Headwind</string>
    <string name="extension_name">headwind</string>
    <string name="headwind">Headwind</string>
    <string name="headwind_description">Current headwind direction and headwind speed</string>
    <string name="tailwind_and_speed">Speed and tailwind</string>
    <string name="tailwind_and_speed_description">Current rider speed and tailwind</string>
    <string name="relativeHumidity">Humidity</string>
    <string name="relativeHumidity_description">Relative humidity in percent</string>
    <string name="cloudCover">Cloud cover</string>
    <string name="cloudCover_description">Current cloud cover in percent</string>
    <string name="windSpeed">Wind speed</string>
    <string name="windSpeed_description">Current absolute wind speed</string>
    <string name="windGusts">Wind gusts</string>
    <string name="windGusts_description">Current wind gust speed in configured unit</string>
    <string name="windDirection">Absolute wind direction</string>
    <string name="windDirection_description">Current absolute wind direction</string>
    <string name="precipitation">Rainfall</string>
    <string name="precipitation_description">Current precipitation (rainfall / snowfall)</string>
    <string name="surfacePressure">Surface pressure</string>
    <string name="surfacePressure_description">Atmospheric pressure at surface in configured unit</string>
    <string name="sealevelPressure">Sealevel pressure</string>
    <string name="sealevelPressure_description">Atmospheric pressure at sea level in configured unit</string>
    <string name="weather_forecast">Weather Forecast</string>
    <string name="uvi">UV Index</string>
    <string name="uvi_description">Current UV Index at current location</string>
    <string name="weather_forecast_description">Current hourly weather forecast</string>
    <string name="temperature_forecast">Temperature Forecast</string>
    <string name="temperature_forecast_description">Current hourly temperature forecast</string>
    <string name="wind_forecast">Wind Forecast</string>
    <string name="wind_forecast_description">Current hourly wind forecast</string>
    <string name="headwind_forecast">Headwind Forecast</string>
    <string name="headwind_forecast_description">Current hourly headwind forecast for loaded route</string>
    <string name="precipitation_forecast">Precipitation Forecast</string>
    <string name="precipitation_forecast_description">Current hourly precipitation forecast</string>
    <string name="temperature">Temperature</string>
    <string name="temperature_description">Current temperature in configured unit</string>
    <string name="headwind_speed">Headwind speed</string>
    <string name="headwind_speed_description">Current headwind speed</string>
    <string name="headwind_time">Headwind time</string>
    <string name="headwind_time_description">Accumulated time spent riding into a headwind of at least 1 m/s</string>
    <string name="headwind_time_distribution">Headwind time distribution</string>
    <string name="headwind_time_distribution_description">Distribution of headwind speed and gusts during the current ride (minutes spent at each speed)</string>
    <string name="userwind_speed_description">Current headwind or wind speed based on user setting</string>
    <string name="userwind_speed">Set wind speed</string>
    <string name="relativeGrade">Relative Grade</string>
    <string name="relativeGrade_description">Perceived grade in percent</string>
    <string name="relativeElevationGain">Relative Elevation Gain</string>
    <string name="relativeElevationGain_description">Perceived elevation gain in meters</string>
    <string name="windDirectionAndSpeed">Wind direction, speed</string>
    <string name="windDirectionAndSpeed_description">Current wind direction and wind speed</string>
    <string name="windDirectionAndSpeedCircle">Wind direction, speed (Circle)</string>
    <string name="windDirectionAndSpeedCircle_description">Current wind direction and wind speed (Circle graphics)</string>
    <string name="forces">Resistance forces</string>
    <string name="forces_description">Current resistance forces (air, rolling, gradient)</string>
    <string name="compass">Compass</string>
    <string name="compass_description">Points to true north</string>
</resources>