<?xml version="1.0" encoding="utf-8"?>
<ExtensionInfo
    displayName="@string/extension_name"
    icon="@drawable/wind"
    id="karoo-headwind"
    scansDevices="false">

    <DataType
        description="@string/tailwind_and_speed_description"
        displayName="@string/tailwind_and_speed"
        graphical="true"
        icon="@drawable/wind"
        typeId="tailwind-and-ride-speed" />

    <DataType
        description="@string/headwind_description"
        displayName="@string/headwind"
        graphical="true"
        icon="@drawable/wind"
        typeId="headwind" />

    <DataType
        description="@string/windDirectionAndSpeed_description"
        displayName="@string/windDirectionAndSpeed"
        graphical="true"
        icon="@drawable/wind"
        typeId="windDirectionAndSpeed" />

    <DataType
        description="@string/windDirectionAndSpeedCircle_description"
        displayName="@string/windDirectionAndSpeedCircle"
        graphical="true"
        icon="@drawable/wind"
        typeId="windDirectionAndSpeedCircle" />

    <DataType
        description="@string/weather_forecast_description"
        displayName="@string/weather_forecast"
        graphical="true"
        icon="@drawable/wind"
        typeId="weatherForecast" />

    <DataType
        description="@string/temperature_forecast_description"
        displayName="@string/temperature_forecast"
        graphical="true"
        icon="@drawable/wind"
        typeId="temperatureForecast" />

    <DataType
        description="@string/precipitation_forecast_description"
        displayName="@string/precipitation_forecast"
        graphical="true"
        icon="@drawable/wind"
        typeId="precipitationForecast" />

    <DataType
        description="@string/wind_forecast_description"
        displayName="@string/wind_forecast"
        graphical="true"
        icon="@drawable/wind"
        typeId="windForecast" />

    <DataType
        description="@string/headwind_forecast_description"
        displayName="@string/headwind_forecast"
        graphical="true"
        icon="@drawable/wind"
        typeId="headwindForecast" />

    <DataType
        description="@string/headwind_speed_description"
        displayName="@string/headwind_speed"
        graphical="false"
        icon="@drawable/wind"
        typeId="headwindSpeed" />

    <DataType
        description="@string/relativeHumidity_description"
        displayName="@string/relativeHumidity"
        graphical="false"
        icon="@drawable/ic_water"
        typeId="relativeHumidity" />

    <DataType
        description="@string/cloudCover_description"
        displayName="@string/cloudCover"
        graphical="false"
        icon="@drawable/ic_cloud"
        typeId="cloudCover" />

    <DataType
        description="@string/windSpeed_description"
        displayName="@string/windSpeed"
        graphical="false"
        icon="@drawable/wind"
        typeId="windSpeed" />

    <DataType
        description="@string/windGusts_description"
        displayName="@string/windGusts"
        graphical="false"
        icon="@drawable/wind"
        typeId="windGusts" />

    <DataType
        description="@string/windDirection_description"
        displayName="@string/windDirection"
        graphical="true"
        icon="@drawable/wind"
        typeId="windDirection" />

    <DataType
        description="@string/precipitation_description"
        displayName="@string/precipitation"
        graphical="false"
        icon="@drawable/ic_water"
        typeId="precipitation" />

    <DataType
        description="@string/surfacePressure_description"
        displayName="@string/surfacePressure"
        graphical="false"
        icon="@drawable/ic_cloud"
        typeId="surfacePressure" />

    <DataType
        description="@string/sealevelPressure_description"
        displayName="@string/sealevelPressure"
        graphical="false"
        icon="@drawable/ic_cloud"
        typeId="sealevelPressure" />

    <DataType
        description="@string/temperature_description"
        displayName="@string/temperature"
        graphical="false"
        icon="@drawable/thermometer"
        typeId="temperature" />

    <DataType
            description="@string/uvi_description"
            displayName="@string/uvi"
            graphical="false"
            icon="@drawable/thermometer"
            typeId="uvi" />

    <DataType
        description="@string/relativeGrade_description"
        displayName="@string/relativeGrade"
        graphical="false"
        icon="@drawable/wind"
        typeId="relativeGrade" />

    <DataType
        description="@string/relativeElevationGain_description"
        displayName="@string/relativeElevationGain"
        graphical="false"
        icon="@drawable/wind"
        typeId="relativeElevationGain" />

    <DataType
        description="@string/forces_description"
        displayName="@string/forces"
        graphical="true"
        icon="@drawable/wind"
        typeId="forces" />
</ExtensionInfo>
